--- a/NEtology course/HW__datatypes_cycles_#4/HW_4_datatypes_cycles_2.ipynb
+++ b/NEtology course/HW__datatypes_cycles_#4/HW_4_datatypes_cycles_2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -32,11 +32,11 @@
     "       'user3': [213, 98, 98, 35]}\n",
     "fll = []\n",
     "for x in ids.values():\n",
-    "        for y in x:\n",
-    "            fll.append(y)\n",
+    "    fll.extend(x)\n",
+    "#   for y in x:\n",
+    "#   fll.append(y)\n",
     "st_l=set (fll)\n",
-    "print (st_l)\n",
-    "\n"
+    "print (st_l)\n"
    ]
   },
   {
@@ -49,17 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Поисковых запросов, содержащих 2 слов(а): 42.86%\n",
-      "Поисковых запросов, содержащих 3 слов(а): 57.14%\n"
+      "Поисковых запросов содержащих 3 слова: 50.0%\n",
+      "Поисковых запросов содержащих 2 слова: 37.5%\n",
+      "Поисковых запросов содержащих 1 слова: 12.5%\n"
      ]
     }
    ],
@@ -73,23 +72,16 @@
     "    'курс по питону',\n",
     "    'сериалы про спорт',\n",
     "]\n",
-    "i = 0\n",
-    "j = 0\n",
-    "lg = 0\n",
-    "for vl in queries:\n",
-    "    num = len(vl.split())\n",
-    "    if num == 3:\n",
-    "        i += 1\n",
-    "        three = ((i / len(queries)) * 100)\n",
-    "    elif num == 2:\n",
-    "        j += 1\n",
-    "        two = ((j / len(queries))*100)\n",
-    "print (f'Поисковых запросов, содержащих 2 слов(а): {two:.2f}%')\n",
-    "print (f'Поисковых запросов, содержащих 3 слов(а): {three:.2f}%')\n",
-    "   \n",
-    "    \n",
-    "    \n",
-    "               "
+    "word_request = {}\n",
+    "for q in queries:\n",
+    "    words = q.split()\n",
+    "    if len(words) in word_request.keys():\n",
+    "        word_request[len(words)] += 1\n",
+    "    else:\n",
+    "        word_request.update({len(words): 1})\n",
+    "for key, value in word_request.items():\n",
+    "    percentage = round((value / len(queries)) * 100, 2)\n",
+    "    print(f'Поисковых запросов содержащих {key} слова: {percentage}%')"
    ]
   },
   {
@@ -102,24 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'adwords': {'revenue': 35, 'cost': 34, 'ROI': 2.94},\n",
-       " 'facebook': {'revenue': 103, 'cost': 110, 'ROI': -6.36},\n",
-       " 'twitter': {'revenue': 11, 'cost': 24, 'ROI': -54.17},\n",
-       " 'vk': {'revenue': 103, 'cost': 98, 'ROI': 5.1},\n",
-       " 'yandex': {'revenue': 179, 'cost': 153, 'ROI': 16.99}}"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = {\n",
     "    'vk': {'revenue': 103, 'cost': 98},\n",
@@ -144,17 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stats = {'facebook': 55, 'yandex': 115, 'vk': 120, 'google': 99, 'email': 42, 'ok': 98}\n",
     "popular_service = max(stats, key=lambda i: stats[i])\n",
