--- a/NEtology course/function_hw5/HW#5_Functions.ipynb
+++ b/NEtology course/function_hw5/HW#5_Functions.ipynb
@@ -49,14 +49,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Введите команду p\n",
+      "Введите номер документа 10006\n",
+      "Владелец документа: Аристарх Павлов\n",
+      "Введите команду s\n",
+      "Введите номер документа 10006\n",
+      "Данные хранятся на полке: 2\n",
       "Введите команду as\n",
-      "Введите номер полки: 9\n",
-      "Полка добавлена. Текущий перечень полок: 1,2,3,9\n",
-      "Введите команду d\n",
-      "Неверная команда\n",
+      "Введите номер полки: 2\n",
+      "Такая полка уже есть =(\n",
+      "Введите команду as\n",
+      "Введите номер полки: 54\n",
+      "Полка добавлена. Текущий перечень полок: 1,2,3,54\n",
       "Введите команду ds\n",
-      "Введите номер полки: 9\n",
-      "Полка удалена. Текущий перечень полок: 1,2,3\n"
+      "Введите номер полки: 54\n",
+      "Полка удалена. Текущий перечень полок: 1,2,3\n",
+      "Введите команду \n",
+      "Неверная команда\n",
+      "Введите команду l\n",
+      "№: 2207 876234, тип: passport, владелец: Василий Гупкин, полка номер: 1\n",
+      "№: 11-2, тип: invoice, владелец: Геннадий Покемонов, полка номер: 1\n",
+      "№: 10006, тип: insurance, владелец: Аристарх Павлов, полка номер: 2\n"
      ]
     }
    ],
@@ -71,15 +84,12 @@
     " '2': ['10006'],\n",
     " '3': []\n",
     "}\n",
-    "branch_del = 0\n",
-    "branch_add = 0\n",
-    "num = 0\n",
     "#______________________________________________________________функция вывода имени по номеру (пункт 1)\n",
-    "def get_name(documents, n):  \n",
+    "def get_name(documents, n): \n",
     "    num = input('Введите номер документа ')\n",
     "    for i in documents:\n",
     "        dictionary = i\n",
-    "        if dictionary['number'] == n:\n",
+    "        if dictionary['number'] == num:\n",
     "            return dictionary['name']\n",
     "    else:\n",
     "        return ('Документ не найден в базе')\n",
@@ -88,7 +98,7 @@
     "    num = input('Введите номер документа ')\n",
     "    for k, v in directories.items():\n",
     "        for i in v:\n",
-    "            if i == str(n):\n",
+    "            if i == str(num):\n",
     "                return k\n",
     "#______________________________________________________________ функция вывода всей информации (пункт 3)\n",
     "def all_info():\n",
@@ -102,6 +112,7 @@
     "        print ('№: ',dictionary['number'],', тип: ',dictionary['type'], ', владелец: ',dictionary['name'], ', полка номер: ', dictionary['branch'], sep='')\n",
     "#______________________________________________________________ функция добавления полки (пункт 4)\n",
     "def add_branch_number ():\n",
+    "    branch_add = 0\n",
     "    number = input('Введите номер полки: ')\n",
     "    if number in list(directories.keys()):\n",
     "        print('Такая полка уже есть =(')\n",
@@ -110,6 +121,7 @@
     "        print(f'Полка добавлена. Текущий перечень полок: {\",\".join(directories.keys())}')\n",
     "#______________________________________________________________ функция удаления полки (пункт 5)\n",
     "def del_branch():\n",
+    "    branch_del = 0\n",
     "    number = input('Введите номер полки: ')\n",
     "    if number in list(directories.keys()) and directories[number] == []:\n",
     "        del directories[number]\n",
@@ -142,21 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'num_as' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-76c653fc72a5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdirectories\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnum_as\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'num_as' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n"
    ]
