--- a/NEtology course/function_hw5/HW#5_Functions.ipynb
+++ b/NEtology course/function_hw5/HW#5_Functions.ipynb
@@ -44,35 +44,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Введите команду p\n",
-      "Введите номер документа 10006\n",
-      "Владелец документа: Аристарх Павлов\n",
-      "Введите команду s\n",
-      "Введите номер документа 10006\n",
-      "Данные хранятся на полке: 2\n",
-      "Введите команду as\n",
-      "Введите номер полки: 2\n",
-      "Такая полка уже есть =(\n",
-      "Введите команду as\n",
-      "Введите номер полки: 54\n",
-      "Полка добавлена. Текущий перечень полок: 1,2,3,54\n",
-      "Введите команду ds\n",
-      "Введите номер полки: 54\n",
-      "Полка удалена. Текущий перечень полок: 1,2,3\n",
-      "Введите команду \n",
-      "Неверная команда\n",
-      "Введите команду l\n",
-      "№: 2207 876234, тип: passport, владелец: Василий Гупкин, полка номер: 1\n",
-      "№: 11-2, тип: invoice, владелец: Геннадий Покемонов, полка номер: 1\n",
-      "№: 10006, тип: insurance, владелец: Аристарх Павлов, полка номер: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "documents = [\n",
     " {'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'},\n",
@@ -85,7 +57,7 @@
     " '3': []\n",
     "}\n",
     "#______________________________________________________________функция вывода имени по номеру (пункт 1)\n",
-    "def get_name(documents, n): \n",
+    "def get_name(documents): \n",
     "    num = input('Введите номер документа ')\n",
     "    for i in documents:\n",
     "        dictionary = i\n",
@@ -94,7 +66,7 @@
     "    else:\n",
     "        return ('Документ не найден в базе')\n",
     "#______________________________________________________________ функция вывода номера полки (пункт 2)\n",
-    "def get_key(directories, n):\n",
+    "def get_key(directories):\n",
     "    num = input('Введите номер документа ')\n",
     "    for k, v in directories.items():\n",
     "        for i in v:\n",
@@ -139,9 +111,9 @@
     "    elif command == ('ds'):\n",
     "        del_branch()\n",
     "    elif command == ('p'):\n",
-    "        print('Владелец документа:', get_name(documents, n))\n",
+    "        print('Владелец документа:', get_name(documents))\n",
     "    elif command == ('s'):\n",
-    "        print('Данные хранятся на полке:', get_key(directories, n))\n",
+    "        print('Данные хранятся на полке:', get_key(directories))\n",
     "    else:\n",
     "        print('Неверная команда')\n",
     "while True:\n",
@@ -150,15 +122,6 @@
     "        break\n",
     "    else:\n",
     "        command_request()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   }
  ],
