--- a/NEtology course/HW_14 - advanced Pandas II/HW_14 - advanced python II.ipynb
+++ b/NEtology course/HW_14 - advanced Pandas II/HW_14 - advanced python II.ipynb
@@ -267,12 +267,28 @@
     "В задаче сквозной аналитики вам предоставили данные по местоположению пользователей. Т. е. для каждого user_id известна последовательность координат (широта/долгота), когда они требовались приложению для полноценной работы. Как бы вы добавили эти сведения в таблицу визитов и покупок? Для составления ответа можно использовать вопросы:\n",
     "* У каждого пользователя известен набор координат. А для связывания с визитом или фактом покупки скорее всего потребуется одно-два числа. Как их получить?\n",
     "* Наборы координат одного и того же пользователя могут быть значительно удалены друг от друга. Как это отразится на вопросе расчетах пункта 1?\n",
-    "* Какие дополнительные признаки можно получить из координат? Ведь это просто числа, которые сами по себе мало что дают.\n",
+    "* Какие дополнительные признаки можно получить из координат? Ведь это просто числа, которые сами по себе мало что дают.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Ответ\n",
-    "Насколько я понял задача связана с посещением и/или подтвержденной покупки пользователя интернет магазина. Т.е. необходимо проанализировать платежеспособность локации (региона, района, города). И/или предрасположенность пользователей в той или иной локации к приобретению тех или иных товаров.\n",
-    " Допустим помимо координат у нас есть еще один датафрейм с user_ID и статистикой его посещений и покупок. Для определения местоположения человека во время покупки как видится необходимо сопоставить время покупки и имеющиеся координаты пользователя объединив в один датафрейм методом outline merge. Из датафрейма можем извлечь всю информацию для пользователя, региона, города, время посещений, покупок, инетерсующие группы товаров, платежеспособность.\n",
-    "  Разница координат вряд ли повлияет на расчет критично, в случае соотношения локаций при покупке или визите для user_ID мы можем потерять точность при присваивании одной локации, что опять же таки зависит от масштаба анализа. Мы можем определить статистически наиболее вероятную локацию, к примеру если из 10 пар координат 5 или 6 идентичные, или находятся в пределах погрешности определения локации. Второй вариант когда мы для каждого уникального пользователя можем присваивать несколько локаций в подгруппе.\n",
-    " Из координат локации/й пользователя можно извлечь адреса, снимки привязанные к геосервисам, погоду, состояние дорог, близлежащие магазины и т.д. из чего можно определить его ориентировочную платежеспособность и многое другое."
+    "Насколько я понял задача связана с посещением и/или подтвержденной покупки пользователя интернет магазина.\n",
+    "Т.е. необходимо проанализировать платежеспособность локации (региона, района, города). \n",
+    "И/или предрасположенность пользователей в той или иной локации к приобретению тех или иных товаров.\n",
+    "\n",
+    "Допустим помимо координат у нас есть еще один датафрейм с user_ID и статистикой его посещений и покупок.\n",
+    "Для определения местоположения человека во время покупки как видится необходимо сопоставить время покупки и имеющиеся координаты пользователя объединив в один датафрейм методом outline merge.\n",
+    "Из датафрейма можем извлечь всю информацию для пользователя, региона, города, время посещений, покупок, инетерсующие группы товаров, платежеспособность.\n",
+    "\n",
+    "Разница координат вряд ли повлияет на расчет критично, в случае соотношения локаций при покупке или визите для user_ID мы можем потерять точность при присваивании одной локации, что опять же таки зависит от масштаба анализа.\n",
+    "Мы можем определить статистически наиболее вероятную локацию, к примеру если из 10 пар координат 5 или 6 идентичные, или находятся в пределах погрешности определения локации. \n",
+    "\n",
+    "Второй вариант когда мы для каждого уникального пользователя можем присваивать несколько локаций в подгруппе.\n",
+    "\n",
+    "Из координат локации/й пользователя можно извлечь адреса, снимки привязанные к геосервисам, погоду, состояние дорог, близлежащие магазины и т.д. из чего можно определить его ориентировочную платежеспособность и многое другое."
    ]
   }
  ],
