--- a/NEtology course/HW_15 - Parsing and API/HW_15 - General of Parsing and API.ipynb
+++ b/NEtology course/HW_15 - Parsing and API/HW_15 - General of Parsing and API.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,23 +27,13 @@
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "import time\n",
-    "\n",
-    "from datetime import datetime, timedelta"
+    "import json\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "KEYWORDS = ['python', 'парсинг']\n",
-    "URL = 'https://habr.com/ru/all/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -67,129 +57,64 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>время</th>\n",
-       "      <th>заголовок</th>\n",
-       "      <th>ссылка</th>\n",
+       "      <th>date</th>\n",
+       "      <th>title</th>\n",
+       "      <th>link</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>сегодня в 17:18</td>\n",
-       "      <td>Создание современных процессов CI/CD для бессе...</td>\n",
-       "      <td>https://habr.com/ru/company/southbridge/blog/5...</td>\n",
+       "      <td>сегодня в 13:56</td>\n",
+       "      <td>С каких книг можно начать изучать программиров...</td>\n",
+       "      <td>https://habr.com/ru/post/536172/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>сегодня в 17:11</td>\n",
-       "      <td>Подводя итоги 2020 года</td>\n",
-       "      <td>https://habr.com/ru/post/536090/#habracut</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>сегодня в 16:56</td>\n",
-       "      <td>Открытые материалы: курс по вычислительной ней...</td>\n",
-       "      <td>https://habr.com/ru/company/JetBrains-educatio...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>сегодня в 15:30</td>\n",
-       "      <td>Как дата-саентисты в ВК делают рекламу эффекти...</td>\n",
-       "      <td>https://habr.com/ru/company/ruvds/blog/536072/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>сегодня в 14:55</td>\n",
-       "      <td>А мог побороться с CoD… История создания шутер...</td>\n",
-       "      <td>https://habr.com/ru/post/535972/#habracut</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>сегодня в 14:53</td>\n",
-       "      <td>lsFusion vis 1С</td>\n",
-       "      <td>https://habr.com/ru/post/536080/#habracut</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>сегодня в 14:23</td>\n",
-       "      <td>Нейротипология и нейромаркетинг будущего</td>\n",
-       "      <td>https://habr.com/ru/post/536076/#habracut</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>сегодня в 14:14</td>\n",
-       "      <td>Хабрастыд-2020</td>\n",
-       "      <td>https://habr.com/ru/post/509418/#habracut</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>сегодня в 14:12</td>\n",
-       "      <td>Швеция: что ждать от релокейта к суровым север...</td>\n",
-       "      <td>https://habr.com/ru/company/gms/blog/535822/#h...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>сегодня в 14:04</td>\n",
-       "      <td>Хакатоны Зима 2020</td>\n",
-       "      <td>https://habr.com/ru/post/536068/#habracut</td>\n",
+       "      <th>0</th>\n",
+       "      <td>сегодня в 13:13</td>\n",
+       "      <td>Как я научила свой компьютер играть в пары исп...</td>\n",
+       "      <td>https://habr.com/ru/post/536162/</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             время                                          заголовок  \\\n",
-       "0  сегодня в 17:18  Создание современных процессов CI/CD для бессе...   \n",
-       "1  сегодня в 17:11                            Подводя итоги 2020 года   \n",
-       "2  сегодня в 16:56  Открытые материалы: курс по вычислительной ней...   \n",
-       "3  сегодня в 15:30  Как дата-саентисты в ВК делают рекламу эффекти...   \n",
-       "4  сегодня в 14:55  А мог побороться с CoD… История создания шутер...   \n",
-       "5  сегодня в 14:53                                    lsFusion vis 1С   \n",
-       "6  сегодня в 14:23           Нейротипология и нейромаркетинг будущего   \n",
-       "7  сегодня в 14:14                                     Хабрастыд-2020   \n",
-       "8  сегодня в 14:12  Швеция: что ждать от релокейта к суровым север...   \n",
-       "9  сегодня в 14:04                                 Хакатоны Зима 2020   \n",
+       "              date                                              title  \\\n",
+       "0  сегодня в 13:56  С каких книг можно начать изучать программиров...   \n",
+       "0  сегодня в 13:13  Как я научила свой компьютер играть в пары исп...   \n",
        "\n",
-       "                                              ссылка  \n",
-       "0  https://habr.com/ru/company/southbridge/blog/5...  \n",
-       "1          https://habr.com/ru/post/536090/#habracut  \n",
-       "2  https://habr.com/ru/company/JetBrains-educatio...  \n",
-       "3  https://habr.com/ru/company/ruvds/blog/536072/...  \n",
-       "4          https://habr.com/ru/post/535972/#habracut  \n",
-       "5          https://habr.com/ru/post/536080/#habracut  \n",
-       "6          https://habr.com/ru/post/536076/#habracut  \n",
-       "7          https://habr.com/ru/post/509418/#habracut  \n",
-       "8  https://habr.com/ru/company/gms/blog/535822/#h...  \n",
-       "9          https://habr.com/ru/post/536068/#habracut  "
+       "                               link  \n",
+       "0  https://habr.com/ru/post/536172/  \n",
+       "0  https://habr.com/ru/post/536162/  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "post_times = []\n",
-    "post_titles = []\n",
-    "post_links = []\n",
-    "post_body = []\n",
-    "for keyword in KEYWORDS:\n",
-    "    params = {\n",
-    "        'q':keyword\n",
-    "    }\n",
-    "    req = requests.get(URL, params)\n",
-    "    soup = BeautifulSoup(req.text, 'html.parser')\n",
-    "    posts = soup.find_all('article', class_='post')\n",
-    "    for post in posts:\n",
-    "        post_times.append(post.find('span', class_='post__time').text)\n",
-    "        post_titles.append(post.find('h2', class_='post__title').text)\n",
-    "        post_links.append(post.find('a', class_='btn').get('href'))\n",
-    "        req2 = requests.get(post.find('a', class_='btn').get('href'))\n",
-    "        content = BeautifulSoup(req2.text, 'html.parser')\n",
-    "        \n",
-    "post_titles = list(map(lambda x: x.strip(), post_titles))\n",
-    "articles = pd.DataFrame({'время':post_times, 'заголовок':post_titles, 'ссылка':post_links})\n",
-    "articles.head (10)"
+    "KEYWORDS = ['python', 'парсинг']\n",
+    "def get_results (words, URL_1 = 'https://habr.com/ru/all/'):\n",
+    "    res = requests.get(URL_1)\n",
+    "    soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "    news_blocks = soup.find_all('article', class_ = 'post post_preview')\n",
+    "    \n",
+    "    preview = pd.DataFrame()\n",
+    "    \n",
+    "    for news_block in news_blocks:\n",
+    "        for key in KEYWORDS:\n",
+    "            if key.lower() in news_block.text.lower():\n",
+    "                date = news_block.find('span', class_ = 'post__time').text\n",
+    "                title = news_block.find('h2', class_ = 'post__title').text\n",
+    "                link = news_block.find('a', class_ = 'post__title_link').get('href')\n",
+    "                all_inf = {'date': date, 'title': title.strip(), 'link': link}\n",
+    "                preview = pd.concat([preview, pd.DataFrame([all_inf])])\n",
+    "          \n",
+    "    preview = preview.drop_duplicates()\n",
+    "    return preview\n",
+    "get_results (KEYWORDS)"
    ]
   },
   {
@@ -208,60 +133,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "НЕ ПУСТИЛ checkbox\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>site</th>\n",
+       "      <th>description</th>\n",
+       "      <th>publishDate</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>twitter.com</td>\n",
+       "      <td>Login credentials for over 32 Million Twitter ...</td>\n",
+       "      <td>2016-10-26T00:00:00Z</td>\n",
+       "      <td>metallurg_annet@mail.ru</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>eina.ru</td>\n",
+       "      <td>In November 2020, a collection of over 23,000 ...</td>\n",
+       "      <td>2020-12-10T00:00:00Z</td>\n",
+       "      <td>metallurg_annet@mail.ru</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>last.fm</td>\n",
+       "      <td>In March 2012, the British music streaming ser...</td>\n",
+       "      <td>2016-10-25T00:00:00Z</td>\n",
+       "      <td>metallurg_annet@mail.ru</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>adobe.com</td>\n",
+       "      <td>In October of 2013, criminals penetrated Adobe...</td>\n",
+       "      <td>2016-10-21T00:00:00Z</td>\n",
+       "      <td>metallurg_annet@mail.ru</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>livejournal.com</td>\n",
+       "      <td>In 2017, social network LiveJournal's database...</td>\n",
+       "      <td>2019-05-23T00:00:00Z</td>\n",
+       "      <td>metallurg_annet@mail.ru</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              site                                        description  \\\n",
+       "0      twitter.com  Login credentials for over 32 Million Twitter ...   \n",
+       "1          eina.ru  In November 2020, a collection of over 23,000 ...   \n",
+       "2          last.fm  In March 2012, the British music streaming ser...   \n",
+       "3        adobe.com  In October of 2013, criminals penetrated Adobe...   \n",
+       "4  livejournal.com  In 2017, social network LiveJournal's database...   \n",
+       "\n",
+       "            publishDate                    email  \n",
+       "0  2016-10-26T00:00:00Z  metallurg_annet@mail.ru  \n",
+       "1  2020-12-10T00:00:00Z  metallurg_annet@mail.ru  \n",
+       "2  2016-10-25T00:00:00Z  metallurg_annet@mail.ru  \n",
+       "3  2016-10-21T00:00:00Z  metallurg_annet@mail.ru  \n",
+       "4  2019-05-23T00:00:00Z  metallurg_annet@mail.ru  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "URL   = 'https://identityprotection.avast.com/v1/web/query/site-breaches/unauthorized-data'\n",
-    "EMAIL = ['reddeade@gmail.com']\n",
+    "EMAIL = ['metallurg_annet@mail.ru']\n",
+    "url = 'https://identityprotection.avast.com/v1/web/query/site-breaches/unauthorized-data'\n",
+    "headers = {'Vaar-Header-App-Product': 'hackcheck-web-avast','Vaar-Version': '0'}\n",
+    "addresses = {'emailAddresses': EMAIL}\n",
     "\n",
-    "headers = {'Accept':'application/json',\n",
-    "'Accept-Encoding':'gzip, deflate, br',\n",
-    "'Accept-Language':'ru-RU,ru;q=0.9,en-US;q=0.8,en;q=0.7',\n",
-    "'Connection':'keep-alive',\n",
-    "'Content-Length':'32',\n",
-    "'Content-Type':'application/json;charset=UTF-8',\n",
-    "'Host':'identityprotection.avast.com',\n",
-    "'Origin':'https://www.avast.com',\n",
-    "'Referer':'https://www.avast.com/',\n",
-    "'Sec-Fetch-Dest':'empty',\n",
-    "'Sec-Fetch-Mode':'cors',\n",
-    "'Sec-Fetch-Site':'same-site',\n",
-    "'User-Agent':'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.111 Safari/537.36',\n",
-    "'Vaar-Header-App-Product':'hackcheck-web-avast',\n",
-    "'Vaar-Version':'0'}\n",
+    "res = requests.post(url, json=addresses, headers=headers)\n",
     "\n",
-    "#POST-orders\n",
-    "params = {'emailAddresses': EMAIL}\n",
+    "df = pd.DataFrame(res.json()['breaches']).T.reset_index() \n",
     "\n",
-    "# POST-orders\n",
-    "req = requests.post(URL, json = params, headers = headers)\n",
-    "if (req.status_code == 200) & (len(req.text)) > 0:\n",
-    "    dict_ = json.loads(req.text)\n",
-    "    rezult = []\n",
+    "df = df[['site', 'description', 'publishDate']]\n",
+    "df['email'] = [', '.join(el.keys()) for el in list(res.json()['data'].values())]\n",
     "\n",
-    "    df_hack_columns = ('mail', 'dt', 'source', 'descript')\n",
-    "    df_hack = pd.DataFrame(columns = df_hack_columns)\n",
-    "\n",
-    "#Dataframe formation\n",
-    "    for item_mail in EMAIL:\n",
-    "        for item in dict_['summary'][item_mail]['breaches']:\n",
-    "            row_ = [item_mail,\\\n",
-    "                    dict_['breaches'][str(item)]['publishDate'],\\\n",
-    "                    dict_['breaches'][str(item)]['site'],\\\n",
-    "                    dict_['breaches'][str(item)]['description']]\n",
-    "            df_hack = df_hack.append( pd.DataFrame([row_], columns = df_hack_columns), ignore_index = True )\n",
-    "    print(df_hack)\n",
-    "else:\n",
-    "    print('НЕ ПУСТИЛ checkbox')"
+    "df"
    ]
   }
  ],
